tests/snapshots/bundled_session_list__a-cross-group-child.snap
---
source: tests/bundled_session_list.rs
expression: "view_tree_record::tree(&native)"
---
list cursor=3 scrollbar=false
  line
    text "── infra " muted
    fill '─' muted
  line
    text " ○ " status_idle
    text "parent-elsewhere"
  line
    text "── webapp " muted
    fill '─' muted
  line
    text " ○ " bold selected
    text "↳ " bold selected
    text "child-here" bold selected
    fill ' ' bold selected
