tests/snapshots/bundled_session_list__a-session-with-no-repo.snap
---
source: tests/bundled_session_list.rs
expression: "view_tree_record::tree(&native)"
---
list cursor=1 scrollbar=false
  line
    text "──  " muted
    fill '─' muted
  line
    text " ○ " bold selected
    text "orphan" bold selected
    fill ' ' bold selected
