tests/snapshots/bundled_session_list__a-spawn-opening-its-own-group.snap
---
source: tests/bundled_session_list.rs
expression: "view_tree_record::tree(&native)"
---
list cursor=0 scrollbar=false
  column
    line
      text "── thurbox " muted
      fill '─' muted
    line
      text " ○ " bold selected
      text "first" bold selected
      fill ' ' bold selected
  column
    line
      text "── infra " muted
      fill '─' muted
    line
      text " ◌ " muted
      text "infra" secondary
      text "  creating…" muted
