tests/snapshots/bundled_session_list__multi-byte-names.snap
---
source: tests/bundled_session_list.rs
expression: "view_tree_record::tree(&native)"
---
list cursor=0 scrollbar=false
  column
    line
      text "── thurbox " muted
      fill '─' muted
    line
      text " ○ " bold selected
      text "h" bold underline selected
      text "éllo " bold selected
      text "—" bold underline selected
      text " wörld" bold selected
      fill ' ' bold selected
  line
    motion cycle key="spinner" keyed_by_id=true fps=8 repeat=true
      text " ⠋ " status_working
      text " ⠙ " status_working
      text " ⠹ " status_working
      text " ⠸ " status_working
      text " ⠼ " status_working
      text " ⠴ " status_working
      text " ⠦ " status_working
      text " ⠧ " status_working
      text " ⠇ " status_working
      text " ⠏ " status_working
    text "日" accent bold underline
    text "本語のセッション"
  line
    text " ○ " status_idle
    text "a" accent bold underline
    text "bc…"
    text " " accent bold underline
    text "def"
