tests/snapshots/bundled_session_list__no-cursor-shown.snap
---
source: tests/bundled_session_list.rs
expression: "view_tree_record::tree(&native)"
---
list cursor=none scrollbar=false
  line
    text "── thurbox " muted
    fill '─' muted
  line
    text " ○ " status_idle
    text "one"
  line
    motion cycle key="spinner" keyed_by_id=true fps=8 repeat=true
      text " ⠋ " status_working
      text " ⠙ " status_working
      text " ⠹ " status_working
      text " ⠸ " status_working
      text " ⠼ " status_working
      text " ⠴ " status_working
      text " ⠦ " status_working
      text " ⠧ " status_working
      text " ⠇ " status_working
      text " ⠏ " status_working
    text "two"
