tests/snapshots/bundled_session_list__one-row-per-status.snap
---
source: tests/bundled_session_list.rs
expression: "view_tree_record::tree(&native)"
---
list cursor=0 scrollbar=false
  column
    line
      text "── thurbox " muted
      fill '─' muted
    line
      text " ○ " bold selected
      text "resting" bold selected
      fill ' ' bold selected
  line
    motion cycle key="spinner" keyed_by_id=true fps=8 repeat=true
      text " ⠋ " status_working
      text " ⠙ " status_working
      text " ⠹ " status_working
      text " ⠸ " status_working
      text " ⠼ " status_working
      text " ⠴ " status_working
      text " ⠦ " status_working
      text " ⠧ " status_working
      text " ⠇ " status_working
      text " ⠏ " status_working
    text "busy"
  line
    text " ◆ " status_blocked
    text "waiting"
    text "  "
    text "Blocked" status_blocked
  line
    text " ● " status_done
    text "finished"
  line
    text " ✗ " status_error
    text "crashed"
  line
    text " ⊘ " status_unreachable
    text "offline"
